--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <link rel="preconnect" crossorigin href="https://www.google-analytics.com">
   <link rel="stylesheet" href="/css/style.min.3c51bbbe4d887b7e.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=47rE43RRzB">
-  <link rel="icon" type="image/png" href="/favicon-32x32.png?v=47rE43RRzB" sizes="32x32">
-  <link rel="icon" type="image/png" href="/favicon-16x16.png?v=47rE43RRzB" sizes="16x16">
+  <link rel="icon" type="image/png" href="https://www.nts.live/favicon-32x32.png?v=47rE43RRzB" sizes="32x32">
+  <link rel="icon" type="image/png" href="https://www.nts.live/favicon-16x16.png?v=47rE43RRzB" sizes="16x16">
   <link rel="manifest" href="/manifest.json?v=47rE43RRzB">
   <link rel="mask-icon" href="/safari-pinned-tab.svg?v=47rE43RRzB" color="#000000">
   <link rel="shortcut icon" href="/favicon.ico?v=47rE43RRzB">
